# GPT-SoVITS-ko

./: .gitignore  LICENSE  README.md  _setup_paths.py  conf.example.yaml  conf.yaml  main.py  pyproject.toml
GPT_SoVITS/: process_ckpt.py  utils.py
GPT_SoVITS/AR/data/: bucket_sampler.py  dataset.py
GPT_SoVITS/AR/modules/: lr_schedulers.py  patched_mha_with_cache.py
GPT_SoVITS/AR/text_processing/: phonemizer.py
GPT_SoVITS/AR/utils/: __init__.py
GPT_SoVITS/TTS_infer_pack/: TTS.py  TTS_config.py  TextPreprocessor.py  text_segmentation_method.py  vocoder_v3v4.py
GPT_SoVITS/configs/: s1longer-v2.yaml  s2.json  s2v2Pro.json  s2v2ProPlus.json
GPT_SoVITS/eres2net/: ERes2Net.py
GPT_SoVITS/feature_extractor/: cnhubert.py  whisper_enc.py
GPT_SoVITS/module/: attentions_onnx.py  core_vq.py  data_utils.py  mel_processing.py  mrte_model.py
GPT_SoVITS/text/: __init__.py  cleaner.py  english.py  japanese.py  korean.py  symbols.py  symbols2.py
GPT_SoVITS/text/LangSegmenter/: langsegmenter.py
GPT_SoVITS/text/en_normalization/: expend.py
GPT_SoVITS/text/g2pw/: dataset.py  onnx_api.py
data/voice-checker/models/: best_model.pth
scripts/: _bootstrap.py
scripts/data_preparation/: asr_whisper.py  denoise.py  slice_audio.py  uvr5_separate.py
scripts/export/: _t2s_torchscript.py  export_torch_script.py  export_v3v4.py  onnx_export.py  process_ckpt.py
scripts/inference/: inference_cli.py  stream_v2pro.py
scripts/preprocessing/: 1-get-text.py  2-get-hubert-wav32k.py  2-get-sv.py  3-get-semantic.py  get_semantic.py
scripts/training/: s1_train.py  s2_train_cfm.py  s2_train_cfm_lora.py  s2_train_vits.py
src/cli/: logger.py  parser.py  pipeline.py  serve.py  server.py
src/config/: config.py  voice.py
src/server/: app.py  context.py
src/server/routers/: __init__.py  emotions.py  labels.py  quality.py  system.py  tts.py  voices.py
tools/: audio_sr.py  label-review.html  slicer2.py
tools/AP_BWE_main/datasets1/: dataset.py
tools/asr/: config.py
tools/training/: checkpoint.py  config_builder.py  data_helpers.py  device.py  logging_utils.py  loop.py
tools/utils/: audio.py  download.py
tools/uvr5/: mdxnet.py  vr.py
tools/uvr5/bs_roformer/: bs_roformer.py  mel_band_roformer.py
tools/voice-checker/: .gitignore  README.md  conf.yaml  main.py  pyproject.toml
tools/voice-checker/src/config/: config.py
tools/voice-checker/src/data/: dataset.py  transforms.py
tools/voice-checker/src/inference/: predictor.py
tools/voice-checker/src/model/: cnn.py
tools/voice-checker/src/server/: app.py  routes.py
tools/voice-checker/src/training/: trainer.py
tools/voice-checker/tools/: labeler.html
tools/voice-checker/vc/: dataset.py  predictor.py  trainer.py  transforms.py
tools/voice-checker/vc/data/: dataset.py
tools/voice-checker/vc/inference/: predictor.py
tools/voice-checker/vc/training/: trainer.py
